--- a/CSScode/style.css
+++ b/CSScode/style.css
@@ -8,7 +8,7 @@
 
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,10,0.7), rgba(4,9,10,0.7));
+  background-image: linear-gradient(rgba(20,18,10,0.3), rgba(20,18,10,0.3));
   background-position: center;
   background-size: cover;
   position: relative;
@@ -29,11 +29,9 @@ nav p1{
   margin-bottom: 10px;
   text-decoration: none;
   font-size: 40px;
-  color: #f20f0d;
+  color: #C70039;
 
 }
-
-
 .nav-links{
   flex: 1;
   text-align: right;
@@ -52,6 +50,161 @@ nav p1{
   text-decoration: none;
   font-size: 20px;
   }
+
+  .nav-links ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background-color: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+
+
+  }
+.nav-links ul li:hover::after{
+  width: 100%;
+}
+.text-box{
+  width: 90%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; 
+}
+
+.text-box h1{
+  font-size: 62px;
+}
+.text-box h1 p1{
+  font-size: 42px;
+}
+.text-box p{
+  margin: 10px 0 40px;
+  color: #fff;
+}
+
+
+
+.hero-btn{
+display: inline-block;
+text-decoration: none;
+color: #fff;
+padding: 5px;
+border: 1px solid #fff;
+font-size: 25px;
+background: transparent;
+position: relative;
+cursor: pointer;
+}
+.hero-btn:hover{
+  border: 1px solid #f44336;
+  background: #f44336;
+  transition: 1s;
+}
+
+
+nav .fa{
+  display: none;
+ }
+
+
+@media(max-width: 700px){
+  .text-box h1{
+  font-size: 20px;
+  }
+.text-box h1 p1{
+  font-size: 15px;
+  }
+
+.nav-links{
+  position: absolute;
+  background: #f44336;
+  height: 100vh;
+  width: 200px;
+  top: 0;
+  right: -200px;
+  text-align-last: left;
+  z-index: 2;
+ 
+  }
+
+nav .fa{
+  display: block;
+  color: #fff;
+  margin: 10px;
+  font-size: 22px;
+  cursor: pointer;
+   }
+.nav-links ul{
+  padding: 30px;
+
+   }
+}
+
+/*---- Services----*/
+
+.services{
+  width: 80%;
+  margin: auto;
+  text-align-last: center;
+  padding-top: 80px;
+}
+h1{
+  font-size: 50;
+  font-weight: 600;
+
+}
+p{
+  color: #111;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+
+.row{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.services-col{
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+.services-col:hover{
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+
+}
+@media(max-width: 700px){
+  .row{
+    flex-direction: column;
+  }
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
