--- a/CSScode/style.css
+++ b/CSScode/style.css
@@ -95,7 +95,7 @@ color: #fff;
 padding: 5px;
 border: 1px solid #fff;
 font-size: 25px;
-background: transparent;
+background: #1ecbe1;
 position: relative;
 cursor: pointer;
 }
@@ -120,7 +120,7 @@ nav .fa{
   }
 
 .nav-links{
-  position: absolute;
+  position: fixed;
   background: #f44336;
   height: 100vh;
   width: 200px;
@@ -195,6 +195,317 @@ h3{
     flex-direction: column;
   }
 }
+
+
+
+/*--Area Services  ---*/
+
+.Area{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 80px;
+
+}
+
+.area-col{
+
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+
+.area-col img{
+
+  width: 100%; 
+  display: block;
+}
+
+.layer{
+  background: transparent; 
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+
+.layer:hover{
+  background: rgba(226,0,0,0.7); 
+}
+
+
+.layer h3{
+  width: 100%;
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.layer:hover h3{
+  bottom: 49%;
+  opacity: 1;
+
+}
+
+/*----- new Section -----*/
+
+.news{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+
+}
+.news-col{
+  flex-basis: 31%;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  text-align: left; 
+}
+.news-col img{
+
+  width: 100%; 
+  border: 10px
+}
+
+.news-col p{
+  padding: 0;
+}
+
+.news-col h3{
+
+  margin-top: 16px;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+
+/*--- Testimonial---*/
+
+.testimonial{
+  width: 80%;
+  margin: auto;
+  padding: 100px;
+  text-align: center; 
+}
+
+.testimonial-col{
+  flex-basis: 44%;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  text-align: left;
+  background: #fff3f3;
+  padding: 25px;
+  cursor: pointer;
+  display: flex;  
+}
+
+.testimonial-col img{
+  height: 40px;
+  margin-left: 5px;
+  margin-right: 30px;
+  border-radius: 50%;
+}
+
+.testimonial-col p{
+  padding: 0;
+
+}
+
+.testimonial-col h3{
+  margin-top: 15px;
+  text-align: left; 
+}
+
+.testimonial-col .fa{
+  color: #f44336;
+}
+
+@media(max-width: 700px){
+
+  .testimonial-col img{
+
+  margin-left: 0px;
+  margin-right: 15px;
+  }
+}
+
+/*----- Call to action-----*/
+
+.cta{
+  margin: 100px auto;
+  width: 80%;
+  background-color: #fff3f3;
+  background-position: center;
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 0;
+
+}
+.cta h1{
+  color: #000;
+  margin-bottom: 40px;
+  padding: 0;
+
+}
+
+@media(max-width: 700px){
+  .cta h1{
+    font-size: 24px;
+  }
+}
+
+/*----Footer---*/
+
+.footer{
+  width: 100%;
+  text-align: center;
+  padding: 30px 0;
+
+}
+.footer h4{
+
+  margin-bottom: 25px;
+  margin-top: 20px;
+  font-weight: 600; 
+}
+
+.icons .fa{
+  color: #f44336;
+  margin: 0 13px;
+  cursor: pointer;
+  padding: 18px 0; 
+}
+
+
+/*---About Us Page------*/
+
+.sub-header{
+  height: 50vh;
+  width: 100%;
+  background-color: #ffb200;
+  text-align: center; 
+  color: #fff;
+
+
+}
+
+
+.sub-header h1{
+  margin-top: 100px;
+}
+
+.about-us{
+  width: 80%;
+  margin: auto;
+  padding-top: 80px;
+  padding-bottom: 50px;
+}
+.about-col{
+  flex-basis: 48%;
+  padding: 30px 2px;
+
+
+}
+
+.about-col img{
+  width: 100%;
+}
+
+.query-box{
+  border: 2px solid #ccc;
+  margin: 50px 300px;
+  padding: 10px 20px;
+}
+
+.query-box h3{
+  text-align: left;
+
+}
+
+.form input, .form textarea{
+  width: 500px;
+  padding: 10px;
+  margin: 15px 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  background-color: #f0f0f0;
+}
+/*----Contact us page-----*/
+
+
+.location{
+  width: 80%;
+  margin: auto;
+  padding: 80px 0;
+}
+
+.location iframe{
+  width: 100%;
+}
+
+.contact-us{
+  width: 80%;
+  margin: auto;
+}
+.contact-col{
+  flex-basis: 48%;
+  margin-bottom: 30px;
+}
+
+.contact-col div{
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.contact-col div .fa{
+  font-size: : 28px;
+  color: #f44336;
+  margin: 10px;
+  margin-right: 30px;
+}
+
+.contact-col div p{
+  padding: 0;
+
+}
+
+.contact-col div h5{
+  font-size: 20px;
+  margin-bottom: 5px;
+  color: #555;
+  font-weight: 400;
+
+}
+.contact-col input, .contact-col textarea{
+  width: 100%;
+  padding: 15px;
+  margin: 17px;
+  outline: none;
+  border: 1px solid #ccc;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
